...
        iconTextId = "기록"
    ),
    HISTORY(
        route = HistoryRoute,
        selectedIcon = Icons.Rounded.History,
        unselectedIcon = Icons.Outlined.HistoryOutlined,
        iconTextId = "통계"
    ),
    SETTINGS(
        route = SettingsRoute,
        selectedIcon = Icons.Rounded.Settings,
        unselectedIcon = Icons.Outlined.SettingsOutlined,
        iconTextId = "설정"
...
